--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,21 +2,57 @@
 name = "nft-blockchain-interactive"
 version = "0.1.0"
 edition = "2021"
-description = "Interactive NFT system with Filecoin and NEAR blockchain integration"
-authors = ["Kapil"]
-license = "MIT"
+description = "Multi-chain framework for generating real-time creative data and persisting/tokenizing on decentralized networks"
+authors = ["Dr. Kapil Bambardekar <kapil.bambardekar@gmail.com>", "Grigori Korotkikh <vdmo@gmail.com>"]
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/compiling-org/nft-blockchain-interactive"
-homepage = "https://github.com/compiling-org/nft-blockchain-interactive"
-keywords = ["blockchain", "nft", "filecoin", "near", "smart-contracts"]
-categories = ["cryptography", "web-programming", "api-bindings"]
+homepage = "https://compiling-org.netlify.app"
+keywords = ["blockchain", "nft", "creative-computing", "decentralized-storage", "real-time"]
+categories = ["cryptography", "web-programming", "api-bindings", "multimedia", "game-development"]
+
+[workspace]
+members = [
+    "src/rust-client",
+    "src/ipfs-integration",
+    "src/near-wasm",
+    "src/solana-client",
+]
 
 [dependencies]
-# Basic dependencies for blockchain library
+# Core creative data processing
 anyhow = "1.0"
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 
+# Blockchain integrations
+near-sdk = { version = "4.0", optional = true }
+solana-program = { version = "1.14", optional = true }
+web3 = { version = "0.18", optional = true }
+
+# IPFS/Filecoin
+ipfs-api = { version = "0.17", optional = true }
+
+# WASM compilation
+wasm-bindgen = { version = "0.2", optional = true }
+js-sys = { version = "0.3", optional = true }
+
+# GPU computing for creative processing
+wgpu = { version = "0.15", optional = true }
+
 [features]
-default = []
+default = ["rust-client"]
+rust-client = []
+ipfs-integration = ["ipfs-api"]
+near-wasm = ["wasm-bindgen", "js-sys", "near-sdk"]
+solana-client = ["solana-program"]
+web3-integration = ["web3"]
+gpu-acceleration = ["wgpu"]
+full = ["rust-client", "ipfs-integration", "near-wasm", "solana-client", "web3-integration", "gpu-acceleration"]
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
