--- a/src/polkadot-client/Cargo.toml
+++ b/src/polkadot-client/Cargo.toml
@@ -1,19 +1,17 @@
 [package]
-name = "nft-near-wasm"
+name = "polkadot-client"
 version = "0.1.0"
 edition = "2021"
-description = "NEAR WASM bindings for interactive creative NFTs and Mintbase integration"
+description = "Polkadot client for creative NFT metadata and cross-chain bridging"
 authors = ["Dr. Kapil Bambardekar <kapil.bambardekar@gmail.com>", "Grigori Korotkikh <vdmo@gmail.com>"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/compiling-org/nft-blockchain-interactive"
 homepage = "https://compiling-org.netlify.app"
 
-[lib]
-crate-type = ["cdylib"]
-
 [dependencies]
-near-sdk = "5.1.0"
-near-contract-standards = "5.1.0"
+subxt = "0.28"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-borsh = "1.0"
+tokio = { version = "1.0", features = ["full"] }
+anyhow = "1.0"
+thiserror = "1.0"
