--- a/src/rust-client/Cargo.toml
+++ b/src/rust-client/Cargo.toml
@@ -20,3 +20,8 @@ base64 = "0.21"
 hex = "0.4"
 sha2 = "0.10"
 rand = "0.8"
+
+# WASM support
+wasm-bindgen = "0.2"
+web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlCanvasElement", "WebGlRenderingContext", "WebGlShader", "WebGlProgram", "WebGlBuffer", "WebGlUniformLocation"] }
+js-sys = "0.3"
