--- a/src/solana-client/Cargo.toml
+++ b/src/solana-client/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "nft-near-wasm"
+name = "solana-client"
 version = "0.1.0"
 edition = "2021"
-description = "NEAR WASM bindings for interactive creative NFTs and Mintbase integration"
+description = "Solana client for high-performance creative metadata storage"
 authors = ["Dr. Kapil Bambardekar <kapil.bambardekar@gmail.com>", "Grigori Korotkikh <vdmo@gmail.com>"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/compiling-org/nft-blockchain-interactive"
@@ -12,8 +12,8 @@ homepage = "https://compiling-org.netlify.app"
 crate-type = ["cdylib"]
 
 [dependencies]
-near-sdk = "5.1.0"
-near-contract-standards = "5.1.0"
+anchor-lang = "0.28.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-borsh = "1.0"
+borsh = "0.10"
+solana-program = "1.16.0"
