--- a/src/rust-client/Cargo.toml
+++ b/src/rust-client/Cargo.toml
@@ -8,20 +8,27 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/compiling-org/nft-blockchain-interactive"
 homepage = "https://compiling-org.netlify.app"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 anyhow = "1.0"
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.0", features = ["full"] }
-chrono = { version = "0.4", features = ["serde"] }
-uuid = { version = "1.0", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde", "wasmbind"] }
+uuid = { version = "1.0", features = ["v4", "serde", "js"] }
 base64 = "0.21"
 hex = "0.4"
 sha2 = "0.10"
 rand = "0.8"
+getrandom = { version = "0.2", features = ["js"] }
 
 # WASM support
 wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlCanvasElement", "WebGlRenderingContext", "WebGlShader", "WebGlProgram", "WebGlBuffer", "WebGlUniformLocation"] }
 js-sys = "0.3"
+console_error_panic_hook = "0.1"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tokio = { version = "1.0", features = ["full"] }
