--- a/src/ipfs-integration/Cargo.toml
+++ b/src/ipfs-integration/Cargo.toml
@@ -15,10 +15,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
-ipfs-api = "0.17"
 multihash = "0.18"
 cid = "0.10"
 base64 = "0.21"
 hex = "0.4"
 sha2 = "0.10"
 futures = "0.3"
+chrono = { version = "0.4", features = ["serde"] }
