--- a/src/rust-client/Cargo.toml
+++ b/src/rust-client/Cargo.toml
@@ -26,8 +26,9 @@ getrandom = { version = "0.2", features = ["js"] }
 
 # WASM support
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlCanvasElement", "WebGlRenderingContext", "WebGlShader", "WebGlProgram", "WebGlBuffer", "WebGlUniformLocation"] }
+web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlCanvasElement", "WebGlRenderingContext", "WebGlShader", "WebGlProgram", "WebGlBuffer", "WebGlUniformLocation", "Navigator", "Gpu"] }
 js-sys = "0.3"
+wasm-bindgen-futures = "0.4"
 console_error_panic_hook = "0.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
