BRUTAL REALITY CHECK: Update all documentation with honest status assessments
- Add reality check warnings to all grant project READMEs
- Document what actually works vs what's mocked/broken
- Provide honest completion percentages and grant eligibility status
- Remove bombastic claims and provide scientific accuracy
- Update main README with 48% functional status matrix

Projects assessed:
- NEAR: Contract deployed, WebGPU working (70% complete)
- Solana: Program compiles, deployment blocked (65% complete)
- Polkadot: Code complete, 0% deployed (75% complete)
- Filecoin: IPFS architecture good, 0% network integration (60% complete)
- Mintbase: Basic structure only, major functionality missing (30% complete)
- Rust Engine: WebGL works great, 0% WebGPU (85% complete as WebGL)

This commit represents our shift from bombastic claims to honest engineering assessment.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
     "src/rust-client",
     "src/ipfs-integration",
     "src/polkadot-client",
+    "contracts/near/soulbound-nft",
 ]
 exclude = [
     "src/near-wasm",
