--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
   "dependencies": {
     "@polkadot/api": "^10.9.1",
     "@polkadot/extension-dapp": "^0.46.5",
+    "@project-serum/anchor": "^0.26.0",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.32",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.87.6",
+    "@types/react-router-dom": "^5.3.3",
     "clsx": "^2.0.0",
     "lucide-react": "^0.263.1",
     "near-api-js": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.6",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0"
   },
