--- a/contracts/near/soulbound-nft/Cargo.toml
+++ b/contracts/near/soulbound-nft/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 near-sdk = { path = "../../../blockchain-ai-ml-references/near-sdk-rs/near-sdk", features = ["legacy"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+borsh = { version = "1.5.7", features = ["derive"] }
 
 [profile.release]
 codegen-units = 1
