feat: Implement comprehensive AI, music, and blockchain AI vector search capabilities
Major implementation milestone with real AI inference, music generation, and LanceDB integration:

- **Real AI Inference Engine**: Complete Candle framework integration with actual neural network model loading and inference for emotion detection and creative generation
- **LanceDB Vector Search**: Full blockchain AI vector database integration for creative asset management and similarity search
- **Music Generation**: Emotional music synthesis from VAD (Valence, Arousal, Dominance) states using rodio audio processing
- **Comprehensive Integration**: Unified creative computing pipeline tying together AI inference, music generation, and vector search
- **Multi-Device Support**: CPU, CUDA, and Metal GPU acceleration for AI inference
- **Blockchain Integration**: Cross-chain support for NEAR, Solana, Polkadot, and Ethereum with vector embeddings
- **WASM Bindings**: Full JavaScript integration for web deployment
- **Performance Metrics**: Built-in timing and resource usage tracking
- **Session Management**: Complete creative session lifecycle with emotional data processing

All modules compile successfully in debug and release modes with comprehensive error handling and type safety.

--- a/src/rust-client/Cargo.toml
+++ b/src/rust-client/Cargo.toml
@@ -8,6 +8,8 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/compiling-org/nft-blockchain-interactive"
 homepage = "https://compiling-org.netlify.app"
 
+[workspace]
+
 [lib]
 crate-type = ["cdylib", "rlib"]
 
@@ -24,12 +26,27 @@ sha2 = "0.10"
 rand = "0.8"
 getrandom = { version = "0.2", features = ["js"] }
 
+# AI/ML dependencies from reference implementations
+candle-core = { git = "https://github.com/huggingface/candle.git", optional = true }
+candle-nn = { git = "https://github.com/huggingface/candle.git", optional = true }
+lancedb = { version = "0.22.3", optional = true }
+rodio = { version = "0.17", optional = true }  # Audio processing instead of tunes
+
+
 # WASM support
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlCanvasElement", "WebGlRenderingContext", "WebGlShader", "WebGlProgram", "WebGlBuffer", "WebGlUniformLocation", "Navigator", "Gpu"] }
+web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlCanvasElement", "WebGlRenderingContext", "WebGlShader", "WebGlProgram", "WebGlBuffer", "WebGlUniformLocation", "Navigator", "Gpu", "MediaDevices", "MediaStream", "MediaStreamConstraints", "AudioContext", "Bluetooth", "BluetoothDevice", "BluetoothRemoteGattServer", "BluetoothRemoteGattService", "BluetoothRemoteGattCharacteristic"] }
 js-sys = "0.3"
 wasm-bindgen-futures = "0.4"
 console_error_panic_hook = "0.1"
+futures = "0.3"
+tokio = { version = "1.0", features = ["sync", "macros"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1.0", features = ["full"] }
+
+[features]
+default = ["ai-ml"]
+ai-ml = ["candle-core", "candle-nn"]
+db = ["lancedb"]
+audio = ["rodio"]
