--- a/contracts/near/soulbound-nft/Cargo.toml
+++ b/contracts/near/soulbound-nft/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-near-sdk = { path = "../../../blockchain-ai-ml-references/near-sdk-rs/near-sdk", features = ["legacy"] }
+near-sdk = { version = "5.1.0", features = ["legacy"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 borsh = { version = "1.5.7", features = ["derive"] }
